package Strategy;

public interface RutaEstrategia {
    public String construirRuta(String a, String b);
}
