@startuml Estrategia
skinparam handwritten true

interface RutaEstrategia {
    + construirRuta(a: String, b: String): String
}

class Navegador {
    - rutaEstrategia : RutaEstrategia
    + setRutaEstrategia(RutaEstretategia: rutaEstrategia): void
    + construirRuta(a: String, a: String): String
}

class CarroParticularStrategy {
    + construirRuta(a: String, b: String): String
}

class PeatonalStrategy {
    + construirRuta(a: String, b: String): String
}

class TransmilenioStrategy {
    + construirRuta(a: String, b: String): String
}

class CiclaStrategy {
    + construirRuta(a: String, b: String): String
}

' Relaciones
Navegador o-- RutaEstrategia : "usa"

RutaEstrategia <|.. CarroParticularStrategy
RutaEstrategia <|.. TransmilenioStrategy
RutaEstrategia <|.. CiclaStrategy
RutaEstrategia <|.. PeatonalStrategy

@enduml